fix(routes): change fill-available to stretch

--- a/src/routes/room/Room.scss
+++ b/src/routes/room/Room.scss
@@ -2,6 +2,6 @@
   height: 100vh;
   height: -moz-available;
   height: -webkit-fill-available;
-  height: fill-available;
+  height: stretch;
   overflow: hidden;
 }
